--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,13 @@
   text-align: center;
 }
 
-body {
+/* body {
   margin: 0;
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
+} */
+body {
+  background-color: #2779e2;
 }
 
 .navbar {
@@ -66,7 +69,6 @@ form {
   border-radius: 7px;
   background-color: white;
   backdrop-filter: blur(5px);
-  background-color: #2d5986;
   overflow: hidden;
 }
 
